# src/docs/swagger_output_v3.json
@@ -424,6 +424,94 @@
         ]
       }
     },
+    "/api/v1/auth/refresh-token": {
+      "post": {
+        "summary": "/api/v1/auth/refresh-token",
+        "responses": {},
+        "tags": [
+          "auth"
+        ]
+      }
+    },
+    "/api/v1/auth/editUser": {
+      "put": {
+        "summary": "/api/v1/auth/editUser",
+        "responses": {},
+        "tags": [
+          "auth"
+        ]
+      }
+    },
+    "/api/v1/auth/signout": {
+      "post": {
+        "summary": "/api/v1/auth/signout",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "number",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Sign out successful."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Invalid token"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "number",
+                      "example": 500
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Internal server error"
+                    },
+                    "error": {
+                      "type": "string",
+                      "example": "Error while making request: timeout of 15000ms exceeded."
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "auth"
+        ]
+      }
+    },
     "/api/v1/booking/create": {
       "post": {
         "summary": "/api/v1/booking/create",
@@ -620,6 +708,26 @@
                     "status": {
                       "type": "number",
                       "example": 401
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "number",
+                      "example": 403
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Invalid role for creating bookings."
                     }
                   }
                 }
@@ -1606,140 +1714,6 @@
         ]
       }
     },
-    "/api/v1/login": {
-      "post": {
-        "summary": "/api/v1/login",
-        "responses": {
-          "201": {
-            "description": "Created",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "number",
-                      "example": 201
-                    },
-                    "message": {
-                      "type": "string",
-                      "example": "Logged in user created successfully"
-                    },
-                    "newLoggedInUser": {
-                      "type": "object",
-                      "properties": {
-                        "id": {
-                          "type": "string",
-                          "example": "e621e131-ed35-4466-900e-17843eefc7ab"
-                        },
-                        "userId": {
-                          "type": "string",
-                          "example": "8b79a7f2-27d4-4ded-82ab-6faf7065d90b"
-                        },
-                        "username": {
-                          "type": "string",
-                          "example": "Test Cleaner"
-                        },
-                        "role": {
-                          "type": "string",
-                          "example": "Cleaner"
-                        },
-                        "fcmToken": {
-                          "type": "string",
-                          "example": "ctrc3dYj5zujlDD5ESpR5F:APA91bH8fTu4QunawMvv6O4p3UKLCfmrlxrdINwDfcoTk3gg2IEBNZLvW_4IJRXLJfw2PYBFwREC7Nm0ClALbo9oyKKilHzvDqRzUesJPwTFmcK6zO36KIo"
-                        },
-                        "updatedAt": {
-                          "type": "string",
-                          "example": "2024-12-09T11:12:50.638Z"
-                        },
-                        "createdAt": {
-                          "type": "string",
-                          "example": "2024-12-09T11:12:50.638Z"
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "number",
-                      "example": 400
-                    },
-                    "message": {
-                      "type": "string",
-                      "example": "Please provide userId, fcmToken, username and role"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        },
-        "tags": []
-      },
-      "get": {
-        "summary": "/api/v1/login",
-        "responses": {},
-        "tags": []
-      }
-    },
-    "/api/v1/login/logout": {
-      "post": {
-        "summary": "/api/v1/login/logout",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "number",
-                      "example": 200
-                    },
-                    "message": {
-                      "type": "string",
-                      "example": "Logged out successfully"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "Not Found",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "number",
-                      "example": 404
-                    },
-                    "message": {
-                      "type": "string",
-                      "example": "Not logged in"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        },
-        "tags": []
-      }
-    },
     "/api/v1/message/{id}": {
       "get": {
         "summary": "/api/v1/message/{id}",
@@ -1847,6 +1821,26 @@
                           ]
                         }
                       }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "number",
+                      "example": 404
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Conversation does not exist"
                     }
                   }
                 }
@@ -2044,6 +2038,159 @@
         "tags": []
       }
     },
+    "/": {
+      "get": {
+        "summary": "/",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/html": {
+                "schema": {
+                  "type": "string",
+                  "example": "Limpia Backend V2 Home!"
+                }
+              }
+            }
+          }
+        },
+        "tags": []
+      }
+    },
+    "/api/v1/login": {
+      "post": {
+        "summary": "/api/v1/login",
+        "responses": {
+          "201": {
+            "description": "Created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "number",
+                      "example": 201
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Logged in user created successfully"
+                    },
+                    "newLoggedInUser": {
+                      "type": "object",
+                      "properties": {
+                        "id": {
+                          "type": "string",
+                          "example": "e621e131-ed35-4466-900e-17843eefc7ab"
+                        },
+                        "userId": {
+                          "type": "string",
+                          "example": "8b79a7f2-27d4-4ded-82ab-6faf7065d90b"
+                        },
+                        "username": {
+                          "type": "string",
+                          "example": "Test Cleaner"
+                        },
+                        "role": {
+                          "type": "string",
+                          "example": "Cleaner"
+                        },
+                        "fcmToken": {
+                          "type": "string",
+                          "example": "ctrc3dYj5zujlDD5ESpR5F:APA91bH8fTu4QunawMvv6O4p3UKLCfmrlxrdINwDfcoTk3gg2IEBNZLvW_4IJRXLJfw2PYBFwREC7Nm0ClALbo9oyKKilHzvDqRzUesJPwTFmcK6zO36KIo"
+                        },
+                        "updatedAt": {
+                          "type": "string",
+                          "example": "2024-12-09T11:12:50.638Z"
+                        },
+                        "createdAt": {
+                          "type": "string",
+                          "example": "2024-12-09T11:12:50.638Z"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "number",
+                      "example": 400
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Please provide userId, fcmToken, username and role"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "tags": []
+      },
+      "get": {
+        "summary": "/api/v1/login",
+        "responses": {},
+        "tags": []
+      }
+    },
+    "/api/v1/login/logout": {
+      "post": {
+        "summary": "/api/v1/login/logout",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "number",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Logged out successfully"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "number",
+                      "example": 404
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Not logged in"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "tags": []
+      }
+    },
     "/api/v1/notification/action": {
       "post": {
         "summary": "/api/v1/notification/action",
@@ -2064,25 +2211,6 @@
                       "example": "Notification sent successfully"
                     }
                   }
-                }
-              }
-            }
-          }
-        },
-        "tags": []
-      }
-    },
-    "/": {
-      "get": {
-        "summary": "/",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "text/html": {
-                "schema": {
-                  "type": "string",
-                  "example": "Limpia Backend V2 Home!"
                 }
               }
             }
